# c-to-wasm-compiler

./: Cargo.toml  README.md
src/: configuration.rs  configuration_builder.rs  error.rs  lib.rs
tests/: fac.c  lib.rs  mocked_fs.rs
